# feel

./: Cargo.toml  README.md
src/: implementation-plan.md  lib.rs
src/execution/: builtin_adders.rs  builtins.rs  compiled_expression.rs  compiler.rs  engine-design.md  engine.rs  interpreter.rs  mod.rs  opcode.rs  statistics.rs  value_properties.rs
src/parsing/: arguments.rs  builtins.rs  context.rs  duration.pest  duration.rs  duration_parser.rs  exclusive_inclusive_range.rs  exclusive_range.rs  execution_log.rs  feel.pest  feel_function.rs  feel_parser.rs  feel_value.rs  feel_value_ops.rs  golden_ratio.rs  horserace.rs  lattice_type.pest  lattice_type.rs  lattice_type_parser.rs  mod.rs  nested_context.rs  parameter_binding.rs  qname.rs  range.rs  range_access.rs  statistics.rs  substring.rs
